# site-manager

./: .gitignore  Dockerfile  README.md  compose.yml  package-lock.json  package.json
backend/: .envrc  Cargo.toml  Rocket.toml
backend/.sqlx/: query-10c29c9d566aa420c07e0bc7479029b64452d3a6d29a053414a875b33c4e57ce.json  query-169ac0eef5dccdff48836e23c986c653b46cd043b1dd9f8ff59e71884c506218.json  query-17a9245be5e8e8b94b86d2bada32ac565a16b0d107c7e4b7cf5d49a24979a872.json  query-2090ca1f135cee868b34544e78ba63c82422d1f7fbfc379744738ff7468d10c3.json  query-2984677c271fc9709d25fe1a7b75242ed857865658971e4bb63f9f565e305d16.json  query-3e2190252d251c471c2d8955d1c4e6f9de91fa8a222cbea13ca54ed0f02e6a0e.json  query-48262aed53a45ddcc8fff6adcf28a10d5ce8cb33aeecbed60241aea2c2cfa99c.json  query-682c3caf321de1459b0a3068278cf5d9671225743361c6b54542c885cfc1f1b8.json  query-6aa84529baedca4a7b2f6b78ed971088a46a657b7c61c3abb8aa56bcbf8fffc8.json  query-7aa99461393b4d989a8db8ef896b73083f96cb7a8548b4419b588992d154da5c.json  query-7f60e0fded51760380bdf205bb35d82b499af5c0d6584611abb6bd72d6e2f769.json  query-80c0f2a345e45fd388258d5cebaedff25537dfae540d5331fbcaec164693574b.json  query-867d174d0e2717b762503a3643c400042b65058b3457c984fe218107b6cb9294.json  query-8d6a58ee04cb1bb14ff88eac9cc65d335f4591d573000846f3d02e85529c691c.json  query-a94d91c3ff6b7e2f58dcd5b4cd1285971343f7169cf609baca5007e2229ffef6.json  query-b5c378a3f2026a9aa40d43736f4ca9c1fd4a1f40497ec3f0324444b7bb0b19b1.json  query-ccc24458645fba47487322bbdbeae3ec8707565fd444bf5727a1c1d2b14ef759.json  query-d3ab7f427c1eb0f11151d497aa121f2ff7f675f386f46aafab56eb5f9bb350a7.json  query-d6a746489bd2c33892107242de85b3bb9fa22293247b1e9f38d1714cbbf616e3.json  query-dbbdd88df95cc58d35166fb7ca9d9ae284434a3ba4c9dbf5f8d82609da16b12d.json  query-eb6e35899dbde6d0b0d5ce06a76e4ae427003b421fa96d2bd1e718985f62fb50.json  query-ecb8be356e3e9834eeefd13e0a5180420b7c293720fd5b81c85c5046ccfdf288.json
backend/migrations/: 0001_init_schema.sql  0002_initial_config.sql  0002_initial_site_config.sql
backend/src/: main.rs
backend/src/app_node/: mod.rs  node.rs  operations.rs  service.rs
backend/src/events/: event_handler.rs  fairing.rs  handler_map.rs  mod.rs
backend/src/panda_comms/: container.rs  fairing.rs  lores_events.rs  manual_discovery.rs  messages.rs  mod.rs  node.rs  operations.rs  site_events.rs  sites.rs  topics.rs
backend/src/panda_node/: extensions.rs  mod.rs  node.rs  topic.rs  (+1 more)
(+69 files in other folders)
