[package]
name = "site-manager"
version = "0.3.2"
edition = "2021"
publish = false

[dependencies]
p2panda-sync = { git = "https://github.com/p2panda/p2panda.git" }
p2panda-net = { git = "https://github.com/p2panda/p2panda.git" }
p2panda-core = { git = "https://github.com/p2panda/p2panda.git" }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda.git" }
p2panda-store = { git = "https://github.com/p2panda/p2panda.git" }
p2panda-stream = { git = "https://github.com/p2panda/p2panda.git" }
gethostname = "0.5.0"
serde = "1.0.216"
anyhow = "1.0.94"
rand = "0.8.5"
ciborium = "0.2.2"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
sqlx = { version = "0.7.4", features = ["macros", "migrate"] }
dotenvy = "0.15.7"
thiserror = "2.0.9"
uuid = { version = "1.11.0", features = ["v4"] }
iroh = "^0.33.0"
hex = "0.4.3"
rocket_cors = "0.6.0"
tokio-util = "0.7.10"
env_logger = "0.11.2"
log = "0.4.20"
tokio-stream = "0.1.17"

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dev-dependencies]
sqlx-cli = { version = "0.7.4", default-features = false, features = [
  "sqlite",
] }
